--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "engines":{"node": "16.11.1"},
+  "engines": {
+    "node": "16.11.1"
+  },
   "name": "vercel-demo",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MHMelikyan/vercel-demo.git"
